--- a/src/css/signup.styl
+++ b/src/css/signup.styl
@@ -88,7 +88,6 @@ body
 				font-size 1.2rem
 				color rgba(#f6d616, .85)
 				text-shadow 0 0 15px #ff5210
-				text-transform uppercase
 				margin-bottom .2rem
 				padding-top 1rem
 				display block
@@ -112,11 +111,8 @@ body
 				&::placeholder
 					color #3e529b
 
-
-
 			.form
 				position relative
-
 
 			.info
 				font-size .9rem
@@ -134,9 +130,7 @@ body
 				display block
 				font-size 1rem
 				text-transform uppercase
-				// color #1a63d1
 				color white
-				// text-shadow 0 0 15px #1a63d1
 				padding-left .2rem
 				padding-bottom .3rem
 
@@ -275,6 +269,17 @@ body
 			box-shadow 0 2px 0 0 rgba(#1adbd4, .1)
 
 
+		&.discord
+			color white
+			margin-top 1.6rem
+
+			a
+				color #4efe50
+				text-decoration none
+				box-shadow 0 2px 0 0 #4efe500f
+
+				&:hover
+					box-shadow none
 
 
 
