--- a/views/signup.pug
+++ b/views/signup.pug
@@ -21,19 +21,22 @@ html
 			.verification.hide
 				h2 Verification Required
 				h5 Step <span class="step"></span> of 2
+
 				img(src="https://i.imgur.com/wWyeptj.gif")
 
 				p Hi <span class="name"></span>. Please verify your signup by switching your Tagpro flair to: <span class="flair">No Flair</span>
 
+				p.discord.hide Now go <a href="https://discord.com/invite/uJxUcSR">join the Discord</a> and say hi.
+
 				button
-					.enabled Done. Verify me! 👌
+					.enabled Done. Verify me!
 					.disabled.spinner
 						svg
 							use(xlink:href="#loader")
 
 			.new
 				.left
-					h1 CTF Season Signup
+					h1= config.title
 					p.details Season 1 of the <span>CTF Super League</span> will run for <span>3 weeks</span> throughout <span>February</span>, with games played <span>Monday</span> and <span>Thursday</span> 7:30 BST.
 
 					h2 Paste in your Profile URL
@@ -45,9 +48,11 @@ html
 				.right
 					h2 Signup Count
 					.bar
-						.progress(style="width:36%")
+						- signups = ((signups.length + 12) / 40) * 100
+						- signups_text = signups + '%'
+						.progress(style="width:"+signups+"%")
 							.strip
-							.count 36%
+							.count= signups_text
 
 		svg.hide
 			defs
