--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -16,8 +16,6 @@ html
 			// a(href="/")
 			// 	include ../../public/favicon.svg
 
-
-
 			a(href="/ctf/1" class=(config.nav.cat === 'ctf' ? 'active' : ''))
 				span CTF
 
@@ -27,11 +25,11 @@ html
 			// a(href="#" class=(config.nav.cat === 'players' ? 'active' : ''))
 			// 	span Players
 
-			a(href="/leaderboards" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
-				span Leaderboard
+			// a(href="/leaderboards" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
+			// 	span Leaderboard
 
-			.right
-				input(type="text", placeholder="Search", name="tagpro.dev search")
+			// .right
+			// 	input(type="text", placeholder="Search", name="tagpro.dev search")
 
-				a(href="/login" class=(config.nav.cat === 'ctf' ? 'active' : ''))
-					span Login
+			// 	a(href="/login" class=(config.nav.cat === 'ctf' ? 'active' : ''))
+			// 		span Login
