--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -804,8 +804,8 @@
 
 			flex 1
 			display flex
-			justify-content: center;
-			align-items: center;
+			justify-content center
+			align-items center
 
 			&:not(:last-child)
 				border-bottom 1px solid #131417
@@ -815,7 +815,8 @@
 		height 100%
 		font-size .8rem
 		padding-left 1rem
-		flex 0 0 15%
+		// flex 0 0 15%
+		flex .5
 
 		a
 			text-decoration none
@@ -827,7 +828,8 @@
 
 	.game
 		display flex
-		flex 0 0 calc( (100% - 15%) / 4)
+		// flex 0 0 calc( (100% - 15%) / 4)
+		flex 1
 		justify-content center
 		align-items center
 		padding .5rem 0
