--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -43,7 +43,7 @@ body
 	width 100%
 	display flex
 	flex-flow nowrap
-	display none
+	// display none
 
 	a
 		color #4a6ba3
@@ -83,6 +83,11 @@ body
 		margin-left auto
 		padding-right 6px
 
+		a
+			color white !important
+			box-shadow 0 2px 0 0 #ffffff24
+			text-shadow 0 0 20px #ffffff
+
 		input
 			font-size .85rem
 			font-weight 400
@@ -107,6 +112,8 @@ body
 
 			&::placeholder
 				color #5b7fc0
+
+
 
 
 .nav-bar-secondary
