--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -13,8 +13,8 @@ html
 		.background
 
 		.nav-bar-primary
-			// a(href="/")
-			// 	include ../../public/favicon.svg
+			a(href="/")
+				include ../../public/favicon.svg
 
 			a(href="/ctf/1" class=(config.nav.cat === 'ctf' ? 'active' : ''))
 				span CTF
@@ -28,8 +28,8 @@ html
 			// a(href="/leaderboards" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
 			// 	span Leaderboard
 
-			// .right
-			// 	input(type="text", placeholder="Search", name="tagpro.dev search")
+			.right
+				input(type="text", placeholder="Search", name="tagpro.dev search")
 
-			// 	a(href="/login" class=(config.nav.cat === 'ctf' ? 'active' : ''))
-			// 		span Login
+				a(href="#")
+					span Login
