--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -43,7 +43,7 @@ body
 	width 100%
 	display flex
 	flex-flow nowrap
-	display none
+	// display none
 
 	a
 		color #4a6ba3
@@ -82,6 +82,7 @@ body
 		justify-content center
 		margin-left auto
 		padding-right 6px
+		display none
 
 		a
 			color white !important
