--- a/views/superleague-leaders.pug
+++ b/views/superleague-leaders.pug
@@ -8,6 +8,7 @@ include template/superleague-nav.pug
 			a(href=config.path + "/leaders" class=(config.nav.sub === 'totals' ? 'active' : '')) Totals
 			a(href=config.path + "/leaders/averages" class=(config.nav.sub === 'averages' ? 'active' : '')) Averages
 			a(href=config.path + "/leaders/teampercent" class=(config.nav.sub === 'teampercent' ? 'active' : '')) Team %
+			a(href=config.path + "/leaders/gamepercent" class=(config.nav.sub === 'gamepercent' ? 'active' : '')) Game %
 			a(href=config.path + "/leaders/top" class=(config.nav.sub === 'top' ? 'active' : '')) Game Tops
 			a(href=config.path + "/leaders/versus" class=(config.nav.sub === 'versus' ? 'active' : '')) Versus
 
