--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -75,6 +75,12 @@ body
 				position relative
 				margin-top -.15rem
 
+			span
+				text-shadow 0 0 15px #e4c7616b
+				color #e4c761
+				margin-left .6rem
+				margin-right 1rem
+
 
 	.right
 		display flex
@@ -82,12 +88,12 @@ body
 		justify-content center
 		margin-left auto
 		padding-right 6px
-		display none
 
 		a
 			color white !important
 			box-shadow 0 2px 0 0 #ffffff24
 			text-shadow 0 0 20px #ffffff
+			display none
 
 		input
 			font-size .85rem
@@ -103,7 +109,6 @@ body
 			background-color #132151e6
 			background-image url("data:image/svg+xml;charset=utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23ffffff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><circle cx='11' cy='11' r='8'/><path d='m21 21-4.35-4.35'/></svg>")
 			border-radius .4rem
-			display none
 
 			&:focus
 				transition background .2s ease-in-out
