--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -228,9 +228,10 @@
 							.v
 								font-size .8rem
 								display inline-block
-								text-align center
+								text-align right
 								// width 90px
 								width 30px
+								width 100%
 
 							.bar
 								display inline-block
