--- a/views/superleague-stats.pug
+++ b/views/superleague-stats.pug
@@ -45,7 +45,7 @@ include template/superleague-nav.pug
 							else if(k === 'player')
 								.item.player
 									a(
-										href='#'
+										href='/player/' + n.player
 									)= n.player
 
 							else if(k === 'acronym')
