--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -12,8 +12,9 @@ html
 		.background
 
 		.nav-bar-primary
-			// a(href="/")
-			// 	include ../../public/favicon.svg
+			a(href="/")
+				include ../../public/favicon.svg
+				span Super League
 
 			a(href="/ctf/1" class=(config.nav.cat === 'ctf' ? 'active' : ''))
 				span CTF
