--- a/views/signup.pug
+++ b/views/signup.pug
@@ -7,7 +7,7 @@ html
 		link(rel='stylesheet', href='/signup.css')
 		link(rel='icon', href='/favicon.svg', type='image/svg+xml')
 		script(src='/signup.js', async)
-		| <script defer type="text/javascript" src="https://api.pirsch.io/pirsch.js" id="pirschjs" data-code="rCf3zbJZfR6JWanXlrObtEsAvLrlZLHS"></script>
+		script(defer, type="text/javascript", src="https://api.pirsch.io/pirsch.js", id="pirschjs", data-code="rCf3zbJZfR6JWanXlrObtEsAvLrlZLHS")
 
 	body
 		.background
